# ngt-benchmark-remote

./: .gitignore  CMakeLists.txt
app/src/: CMakeLists.txt
app/src/panng-test/: CMakeLists.txt
app/src/panng-test/dbpedia-entities-efficient-splade-100k-test/: CMakeLists.txt  dbpedia-entities-efficient-splade-100k-panng-test.cpp
app/src/panng-test/enron-test/: CMakeLists.txt  enron-panng-test.cpp
app/src/panng-test/gist-test/: CMakeLists.txt  gist-panng-test.cpp
app/src/panng-test/nytimes-256-angular-test/: CMakeLists.txt  nytimes-256-angular-panng-test.cpp
app/src/panng-test/sift-test/: CMakeLists.txt  sift-panng-test.cpp
app/src/panng-test/siftsmall-test/: CMakeLists.txt  siftsmall-panng-test.cpp
app/src/panng-test/trevi-test/: CMakeLists.txt  trevi-panng-test.cpp
app/src/qg-test/enron-test/: CMakeLists.txt  enron-qg-test.cpp
app/src/qg-test/gist-test/: CMakeLists.txt  gist-qg-test.cpp
app/src/qg-test/glove-200-angular-test/: CMakeLists.txt  glove-200-angular-qg-test.cpp
app/src/qg-test/nytimes-256-angular-test/: CMakeLists.txt  nytimes-256-angular-qg-test.cpp
app/src/qg-test/sift-test/: CMakeLists.txt  sift-qg-test.cpp
app/src/qg-test/siftsmall-test/: CMakeLists.txt  siftsmall-qg-test.cpp
app/src/qg-test/trevi-test/: CMakeLists.txt  trevi-qg-test.cpp
lib/: CMakeLists.txt
lib/NGT/: CMakeLists.txt  Capi.cpp  Clustering.h  Command.cpp  Command.h  Common.h  Graph.h  GraphReconstructor.h  Index.cpp  Index.h  Node.cpp  Node.h  ObjectSpace.cpp  PrimitiveComparator.h  SharedMemoryAllocator.cpp  SharedMemoryAllocator.h  Thread.h  Tree.cpp  Tree.h  half.hpp
lib/NGT/NGTQ/: Capi.cpp  Capi.h  HierarchicalKmeans.cpp  HierarchicalKmeans.h  Optimizer.h  QbgCli.cpp  QbgCli.h  QuantizedBlobGraph.h  QuantizedGraph.cpp  QuantizedGraph.h  Quantizer.h
result/panng-test/dbpedia-entities-efficient-splade-100k/: dbpedia-entities-efficient-splade-100k_recall_qps_result.csv
result/panng-test/enron/: enron_recall_qps_result.csv
result/panng-test/gist/: gist_recall_qps_result.csv
result/panng-test/glove-200-angular/: glove-200-angular_recall_qps_result.csv
result/panng-test/nytimes-256-angular/: nytimes-256-angular_recall_qps_result.csv
result/panng-test/sift/: sift_recall_qps_result.csv
result/panng-test/siftsmall/: siftsmall_recall_qps_result.csv
result/panng-test/trevi/: trevi_recall_qps_result.csv
result/qg-test/enron/: enron_recall_qps_result.csv
result/qg-test/gist/: gist_recall_qps_result.csv
result/qg-test/sift/: sift_recall_qps_result.csv
result/qg-test/siftsmall/: siftsmall_recall_qps_result.csv
